--- a/weatherstation/static/css/style.css
+++ b/weatherstation/static/css/style.css
@@ -1,17 +1,14 @@
-html {
-  font-family: sans-serif;
-  background: #eee;
-  padding: 1rem;
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-body {
-  max-width: 960px;
-  margin: 0 auto;
-  background: white;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: serif;
-  color: #377ba8;
-  margin: 1rem 0;
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
 }
